rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x725_1995_GRMExample.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x725_1995_GRMExample.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod grmexample {
    extern crate alloc;
    use super::attribute_asn1_module::GroupObjects;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("1"))]
    pub struct One(pub u8);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("1..=5"))]
    pub struct OneToFive(pub u8);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("1.."))]
    pub struct OneToMax(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct PersonName(pub GraphicString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1"))]
    pub struct SingleValued(pub GroupObjects);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("2"))]
    pub struct Two(pub u8);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("2.."))]
    pub struct TwoToMax(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, value("0..=2"))]
    pub struct ZeroToTwo(pub u8);
    pub static GRM_EX_ATTRIBUTE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 7u32, 7u32, 99u32]).to_owned());
    pub static GRM_EX_NAME_BINDING: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 7u32, 6u32, 99u32]).to_owned());
    pub static GRM_EX_OBJECT: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 7u32, 3u32, 99u32]).to_owned());
    pub static GRM_EX_PACKAGE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 7u32, 4u32, 99u32]).to_owned());
    pub static GRM_EX_RELATIONSHIP_CLASS: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 7u32, 11u32, 99u32]).to_owned());
    pub static GRM_EX_RELATIONSHIP_MAPPING: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 7u32, 12u32, 99u32]).to_owned());
    pub static GRM_EX_ROLE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 3u32, 7u32, 13u32, 99u32]).to_owned());
}
