rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x740_1992_SecurityAuditTrailDefinitions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x740_1992_SecurityAuditTrailDefinitions.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to link value with 'ServiceReportCause'
LinkerError in ASN grammar: Failed to link value with 'ServiceReportCause'
LinkerError in ASN grammar: Failed to link value with 'ServiceReportCause'
LinkerError in ASN grammar: Failed to link value with 'ServiceReportCause'
LinkerError in ASN grammar: Failed to link value with 'ServiceReportCause'
LinkerError in ASN grammar: Failed to link value with 'ServiceReportCause'


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod security_audit_trail_definitions {
    extern crate alloc;
    use super::security_audit_trail_asn1_module::ServiceReportCause;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static OTHER_REASON: LazyLock<ServiceReportCause> = LazyLock::new(|| {
        ServiceReportCause(ServiceReportCause(
            Oid::new(&[&***SERVICE_REPORT_CAUSE, &[6u32]].concat())
                .unwrap()
                .to_owned(),
        ))
    });
    pub static SECURITY_AUDIT_TRAIL_ATTRIBUTE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 8u32, 7u32]).to_owned());
    pub static SECURITY_AUDIT_TRAIL_NOTIFICATION: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 8u32, 10u32]).to_owned());
    pub static SECURITY_AUDIT_TRAIL_OBJECT: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 8u32, 3u32]).to_owned());
    pub static SECURITY_AUDIT_TRAIL_PACKAGE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 8u32, 4u32]).to_owned());
    pub static SERVICE_DENIAL: LazyLock<ServiceReportCause> = LazyLock::new(|| {
        ServiceReportCause(ServiceReportCause(
            Oid::new(&[&***SERVICE_REPORT_CAUSE, &[2u32]].concat())
                .unwrap()
                .to_owned(),
        ))
    });
    pub static SERVICE_FAILURE: LazyLock<ServiceReportCause> = LazyLock::new(|| {
        ServiceReportCause(ServiceReportCause(
            Oid::new(&[&***SERVICE_REPORT_CAUSE, &[4u32]].concat())
                .unwrap()
                .to_owned(),
        ))
    });
    pub static SERVICE_RECOVERY: LazyLock<ServiceReportCause> = LazyLock::new(|| {
        ServiceReportCause(ServiceReportCause(
            Oid::new(&[&***SERVICE_REPORT_CAUSE, &[5u32]].concat())
                .unwrap()
                .to_owned(),
        ))
    });
    pub static SERVICE_REPORT_CAUSE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 8u32, 0u32, 1u32]).to_owned());
    #[doc = " the following OBJECT IDENTIFIER values can be used as values for the service report cause parameter in A.5."]
    pub static SERVICE_REQUEST: LazyLock<ServiceReportCause> = LazyLock::new(|| {
        ServiceReportCause(ServiceReportCause(
            Oid::new(&[&***SERVICE_REPORT_CAUSE, &[1u32]].concat())
                .unwrap()
                .to_owned(),
        ))
    });
    pub static SERVICE_RESPONSE: LazyLock<ServiceReportCause> = LazyLock::new(|| {
        ServiceReportCause(ServiceReportCause(
            Oid::new(&[&***SERVICE_REPORT_CAUSE, &[3u32]].concat())
                .unwrap()
                .to_owned(),
        ))
    });
}
