rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x741_1995_AccessControl-ASN1Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x741_1995_AccessControl-ASN1Module.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod access_control_asn1_module {
    extern crate alloc;
    use super::acse_1::AETitle;
    use super::attribute_asn1_module::*;
    use super::cmip_1::{
        ActionTypeId, AttributeId, CMISFilter, CMISSync, DistinguishedName, ObjectClass,
        ObjectInstance, Scope,
    };
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "AC-AUTH-CONTEXT")]
    pub struct ACAUTHCONTEXT(pub DMITYPEIDENTIFIER);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "AC-CAP-IDENTITY")]
    pub struct ACCAPIDENTITY(pub DMITYPEIDENTIFIER);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "AC-PROXY")]
    pub struct ACPROXY(pub DMITYPEIDENTIFIER);
    #[doc = " Anonymous SET OF member "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, identifier = "CHOICE")]
    pub enum AnonymousAccessControlList {
        #[rasn(tag(context, 0))]
        proxy(Proxy),
        #[rasn(tag(context, 1))]
        initiatorName(InitiatorName),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct AccessControlList(pub SetOf<AnonymousAccessControlList>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct AccessControlObjectName(pub GraphicString);
    #[doc = " Anonymous SET OF member "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(identifier = "SEQUENCE")]
    pub struct AnonymousActionFilterList {
        #[rasn(identifier = "actionTypeId")]
        pub action_type_id: ActionTypeId,
        #[rasn(identifier = "attributeFilterList")]
        pub attribute_filter_list: Option<FilterList>,
    }
    impl AnonymousActionFilterList {
        pub fn new(
            action_type_id: ActionTypeId,
            attribute_filter_list: Option<FilterList>,
        ) -> Self {
            Self {
                action_type_id,
                attribute_filter_list,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ActionFilterList(pub SetOf<AnonymousActionFilterList>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct AuthenticationContext {
        #[rasn(tag(context, 0), identifier = "authenticationPolicyId")]
        pub authentication_policy_id: Any,
        #[rasn(tag(context, 1))]
        pub requirements: Any,
    }
    impl AuthenticationContext {
        pub fn new(authentication_policy_id: Any, requirements: Any) -> Self {
            Self {
                authentication_policy_id,
                requirements,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct Boolean(pub bool);
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct AnonymousCapabilityIdentitiesListKnownForm {
        #[rasn(identifier = "initiatorName")]
        pub initiator_name: InitiatorName,
        #[rasn(identifier = "sdaList")]
        pub sda_list: Option<SdaList>,
    }
    impl AnonymousCapabilityIdentitiesListKnownForm {
        pub fn new(initiator_name: InitiatorName, sda_list: Option<SdaList>) -> Self {
            Self {
                initiator_name,
                sda_list,
            }
        }
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct AnonymousCapabilityIdentitiesListUnknownForm {
        pub identifier: Any,
        pub value: Any,
    }
    impl AnonymousCapabilityIdentitiesListUnknownForm {
        pub fn new(identifier: Any, value: Any) -> Self {
            Self { identifier, value }
        }
    }
    #[doc = " Anonymous SET OF member "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, identifier = "CHOICE")]
    pub enum AnonymousCapabilityIdentitiesList {
        #[rasn(tag(context, 0))]
        knownForm(AnonymousCapabilityIdentitiesListKnownForm),
        #[rasn(tag(context, 1))]
        unknownForm(AnonymousCapabilityIdentitiesListUnknownForm),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct CapabilityIdentitiesList(pub SetOf<AnonymousCapabilityIdentitiesList>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct DefaultAccess {
        #[rasn(tag(context, 0), default = "default_access_action_default")]
        pub action: EnforcementAction,
        #[rasn(tag(context, 1), default = "default_access_create_default")]
        pub create: EnforcementAction,
        #[rasn(tag(context, 2), default = "default_access_delete_default")]
        pub delete: EnforcementAction,
        #[rasn(tag(context, 3), default = "default_access_get_default")]
        pub get: EnforcementAction,
        #[rasn(tag(context, 4), default = "default_access_replace_default")]
        pub replace: EnforcementAction,
        #[rasn(
            tag(context, 5),
            default = "default_access_add_member_default",
            identifier = "addMember"
        )]
        pub add_member: EnforcementAction,
        #[rasn(
            tag(context, 6),
            default = "default_access_remove_member_default",
            identifier = "removeMember"
        )]
        pub remove_member: EnforcementAction,
        #[rasn(
            tag(context, 7),
            default = "default_access_replace_with_default_default",
            identifier = "replaceWithDefault"
        )]
        pub replace_with_default: EnforcementAction,
        #[rasn(
            tag(context, 8),
            default = "default_access_multiple_object_selection_default",
            identifier = "multipleObjectSelection"
        )]
        pub multiple_object_selection: EnforcementAction,
        #[rasn(tag(context, 9), default = "default_access_filter_default")]
        pub filter: EnforcementAction,
    }
    impl DefaultAccess {
        pub fn new(
            action: EnforcementAction,
            create: EnforcementAction,
            delete: EnforcementAction,
            get: EnforcementAction,
            replace: EnforcementAction,
            add_member: EnforcementAction,
            remove_member: EnforcementAction,
            replace_with_default: EnforcementAction,
            multiple_object_selection: EnforcementAction,
            filter: EnforcementAction,
        ) -> Self {
            Self {
                action,
                create,
                delete,
                get,
                replace,
                add_member,
                remove_member,
                replace_with_default,
                multiple_object_selection,
                filter,
            }
        }
    }
    impl std::default::Default for DefaultAccess {
        fn default() -> Self {
            Self {
                action: default_access_action_default(),
                create: default_access_create_default(),
                delete: default_access_delete_default(),
                get: default_access_get_default(),
                replace: default_access_replace_default(),
                add_member: default_access_add_member_default(),
                remove_member: default_access_remove_member_default(),
                replace_with_default: default_access_replace_with_default_default(),
                multiple_object_selection: default_access_multiple_object_selection_default(),
                filter: default_access_filter_default(),
            }
        }
    }
    fn default_access_action_default() -> EnforcementAction {
        DENY
    }
    fn default_access_create_default() -> EnforcementAction {
        DENY
    }
    fn default_access_delete_default() -> EnforcementAction {
        DENY
    }
    fn default_access_get_default() -> EnforcementAction {
        DENY
    }
    fn default_access_replace_default() -> EnforcementAction {
        DENY
    }
    fn default_access_add_member_default() -> EnforcementAction {
        DENY
    }
    fn default_access_remove_member_default() -> EnforcementAction {
        DENY
    }
    fn default_access_replace_with_default_default() -> EnforcementAction {
        DENY
    }
    fn default_access_multiple_object_selection_default() -> EnforcementAction {
        DENY
    }
    fn default_access_filter_default() -> EnforcementAction {
        DENY
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum DenialGranularity {
        request = 0,
        object = 1,
        attribute = 2,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum DenialResponse {
        denyWithResponse = 0,
        denyWithoutResponse = 1,
        abortAssociation = 2,
        denyWithFalseResponse = 3,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum DomainIdentity {
        domainName(DistinguishedName),
        privateName(OctetString),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum EnforcementAction {
        denyWithResponse = 0,
        denyWithoutResponse = 1,
        abortAssociation = 2,
        denyWithFalseResponse = 3,
        allow = 4,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct FilterList(pub SetOf<CMISFilter>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum InitiatorName {
        #[rasn(tag(context, 1))]
        individualName(DistinguishedName),
        #[rasn(tag(context, 2))]
        groupName(DistinguishedName),
        #[rasn(tag(context, 3))]
        role(DistinguishedName),
        #[rasn(tag(context, 4))]
        application(AETitle),
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum InvalidAccessControlFilterErrorId {
        duplicateId = 0,
        heterogeneousId = 1,
        invalidId = 2,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct InvalidAccessControlFilter {
        #[rasn(identifier = "errorId")]
        pub error_id: InvalidAccessControlFilterErrorId,
        pub filter: Option<CMISFilter>,
    }
    impl InvalidAccessControlFilter {
        pub fn new(
            error_id: InvalidAccessControlFilterErrorId,
            filter: Option<CMISFilter>,
        ) -> Self {
            Self { error_id, filter }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct LabelName(pub Integer);
    #[doc = " Anonymous SET OF member "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(identifier = "SEQUENCE")]
    pub struct AnonymousObjectClassList {
        #[rasn(tag(context, 0), identifier = "objectClass")]
        pub object_class: ObjectClass,
        #[rasn(tag(context, 1), identifier = "nameBinding")]
        pub name_binding: Option<ObjectIdentifier>,
    }
    impl AnonymousObjectClassList {
        pub fn new(object_class: ObjectClass, name_binding: Option<ObjectIdentifier>) -> Self {
            Self {
                object_class,
                name_binding,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ObjectClassList(pub SetOf<AnonymousObjectClassList>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct OperationType(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct OperationsList(pub SetOf<OperationType>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct Proxy {
        #[rasn(tag(context, 0), identifier = "proxyId")]
        pub proxy_id: Any,
        #[rasn(tag(context, 1), identifier = "proxyValue")]
        pub proxy_value: Any,
    }
    impl Proxy {
        pub fn new(proxy_id: Any, proxy_value: Any) -> Self {
            Self {
                proxy_id,
                proxy_value,
            }
        }
    }
    #[doc = " Anonymous SET OF member "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(identifier = "SEQUENCE")]
    pub struct AnonymousSdaList {
        #[rasn(identifier = "securityDomainAuthorityName")]
        pub security_domain_authority_name: SecurityDomainAuthorityName,
        #[rasn(identifier = "operationType")]
        pub operation_type: OperationType,
    }
    impl AnonymousSdaList {
        pub fn new(
            security_domain_authority_name: SecurityDomainAuthorityName,
            operation_type: OperationType,
        ) -> Self {
            Self {
                security_domain_authority_name,
                operation_type,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct SdaList(pub SetOf<AnonymousSdaList>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum SecurityDomainAuthorityName {
        #[rasn(tag(context, 1))]
        domainAuthorityName(DistinguishedName),
        #[rasn(tag(context, 2))]
        alternativeAuthorityName(Proxy),
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum AnonymousSecurityLabelInitiatorLabelClearance {
        #[rasn(tag(context, 0))]
        localForm(Integer),
        #[rasn(tag(context, 1))]
        globalForm(ObjectIdentifier),
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct AnonymousSecurityLabelInitiatorLabel {
        pub clearance: AnonymousSecurityLabelInitiatorLabelClearance,
        #[rasn(tag(context, 2))]
        pub category: Option<BitString>,
    }
    impl AnonymousSecurityLabelInitiatorLabel {
        pub fn new(
            clearance: AnonymousSecurityLabelInitiatorLabelClearance,
            category: Option<BitString>,
        ) -> Self {
            Self {
                clearance,
                category,
            }
        }
    }
    #[doc = " Anonymous SET OF member "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, identifier = "CHOICE")]
    pub enum AnonymousSecurityLabel {
        #[rasn(tag(context, 1))]
        initiatorLabel(AnonymousSecurityLabelInitiatorLabel),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct SecurityLabel(pub SetOf<AnonymousSecurityLabel>);
    #[doc = " Anonymous SET OF member "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(identifier = "SEQUENCE")]
    pub struct AnonymousStateConditions {
        #[rasn(identifier = "conditionalObject")]
        pub conditional_object: ObjectInstance,
        pub state: CMISFilter,
    }
    impl AnonymousStateConditions {
        pub fn new(conditional_object: ObjectInstance, state: CMISFilter) -> Self {
            Self {
                conditional_object,
                state,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct StateConditions(pub SetOf<AnonymousStateConditions>);
    pub const DENY: EnforcementAction = EnforcementAction::denyWithResponse;
    pub static DENY_ALL: LazyLock<DefaultAccess> = LazyLock::new(|| {
        DefaultAccess::new(DENY, DENY, DENY, DENY, DENY, DENY, DENY, DENY, DENY, DENY)
    });
    pub const R_FALSE: Boolean = Boolean(false);
}
