rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x741_1995_AccessControlDefinitions.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x741_1995_AccessControlDefinitions.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod access_control_definitions {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static ACCESS_CONTROL_ATTRIBUTE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 9u32, 7u32]).to_owned());
    pub static ACCESS_CONTROL_NAME_BINDING: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 9u32, 6u32]).to_owned());
    pub static ACCESS_CONTROL_OBJECT: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 9u32, 3u32]).to_owned());
    pub static ACCESS_CONTROL_PACKAGE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 9u32, 4u32]).to_owned());
    pub static ACCESS_CONTROL_PARAMETER: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 9u32, 2u32, 9u32, 5u32]).to_owned());
}
