rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x742_1995_UsageMeteringDataInfo.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x742_1995_UsageMeteringDataInfo.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod usage_metering_data_info {
    extern crate alloc;
    use super::attribute_asn1_module::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "UMF-USAGE")]
    pub struct UMFUSAGE(pub DMITYPEIDENTIFIER);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct UsageInfo {
        #[rasn(identifier = "serviceType")]
        pub service_type: Any,
        #[rasn(identifier = "usageData")]
        pub usage_data: Any,
    }
    impl UsageInfo {
        pub fn new(service_type: Any, usage_data: Any) -> Self {
            Self {
                service_type,
                usage_data,
            }
        }
    }
}
